--- a/index.html
+++ b/index.html
@@ -6,14 +6,187 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy</title>
+	<title>Kawasaki Nederland</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link href="styles/home.css" rel="stylesheet">
+	<link rel="icon" type="image/svg+xml" href="images/kawasaki-groen-logo.png">
 </head>
 
 <body>
-	<h1>Goede dag! dit wordt yuans project pagina!</h1>
+	
+
+	<header>
+		<h1 aria-label="Kawasaki Nederland">
+			<img src="images/kawasaki-groen-logo.png" alt="">
+		</h1>
+		<!-- BRON VAN LOGO: https://www.freepnglogos.com/pics/kawasaki-motors-png-logo -->
+		<button class="hamburger" aria-label="Navigatie knop uitklappen">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        
+        <nav>
+            <ul class="nav-links">
+                <li><a href="">Producten</a></li>
+                <li><a href="">Accessoires & Onderdelen</a></li>
+                <li><a href="">Race</a></li>
+                <li><a href="">Service</a></li>
+            </ul>
+        </nav>
+	</header>
+
+	<main>
+		<section>
+			<h2>NEW Z900 Performance. Refinement. Sugomi</h2>
+			<!-- <img src="images/z900.jpg" alt="Foto van de nieuwe motor 'Z900'">  -->
+			<!-- BRON VAN Z900: https://scooterxpress.nl/kawasaki-maakt-prijzen-bekend-van-de-compleet-nieuwe-z900/ -->
+			<a href="z900.html">Lees meer</a>
+		</section>
+
+		<section>
+			<h2>Zoek jouw perfecte motor!</h2>
+			<form>
+				<fieldset>
+					<legend>Type rijbewijs</legend>
+					<label>
+						<input type="checkbox" name="license" value="A"> A
+					</label>
+					<label>
+						<input type="checkbox" name="license" value="A2"> A2
+					</label>
+					<label>
+						<input type="checkbox" name="license" value="A1"> A1
+					</label>
+				</fieldset>
+		
+				<fieldset>
+					<legend>Aantal cylinders</legend>
+					<label>
+						<input type="checkbox" name="cylinders" value="1"> 1 cylinder
+					</label>
+					<label>
+						<input type="checkbox" name="cylinders" value="2"> 2 cylinders
+					</label>
+					<label>
+						<input type="checkbox" name="cylinders" value="3"> 3 cylinders
+					</label>
+					<label>
+						<input type="checkbox" name="cylinders" value="4"> 4 cylinders
+					</label>
+				</fieldset>
+		
+				<fieldset>
+					<legend>Aantal CC</legend>
+					<label>
+						<input type="range" name="cc" min="125" max="2500">
+					</label>
+				</fieldset>
+		
+				<fieldset>
+					<legend>Prijs</legend>
+					<label>
+						<input type="range" name="price" min="0" max="50000">
+					</label>
+				</fieldset>
+		
+				<button type="submit">Zoek!</button>
+				<button type="reset">Reset</button>
+			</form>
+		</section>
+
+		<section>
+			<h2>Offers</h2>
+			<article>
+				<h3>Kids fun promo</h3>
+				<p>Ontvang nu €500,- voordeel bij aanschaf van een KFX90, KLX110R of KLX140R!</p>
+				<a href="" aria-label="onydek meer over kids fun promo">Ontdek meer</a>
+				<img src="images/kind-cross1.jpg" alt="Foto van kinderen die cross rijden">
+				<!-- Kind crossride image bron: https://sengegraphics.com/blog/dirt-bike/top-5-reasons-dirt-bike-racing-is-beneficial-for-kids -->
+			</article>
+
+			<article>
+				<h3>Extra touring voodeel</h3>
+				<p>De hightech Ninja 1000SX en Versys 1000 modellen zijn leiders in hun segment. Dit seizoen kun je deze modellen nog cpmpleter maken met de extra voordelige tourer pakketten.</p>
+				<a href="">Ontdek meer</a>
+				<img src="images/touring-voordeel.jpeg" alt="Foto van een man die aan het touren is op zijn motor in een bos">
+				<!-- Touring foto bron: https://www.suzuki.nl/motoren/modellen/adventure-sport/ -->
+			</article>
+
+			<button>Bekijk alles</button>
+		</section>
+
+		<section>
+			<h2>Maak een proefrit</h2>
+			<fieldset>
+				<legend>Vind de dichtsbijzijnde dealer</legend>
+				postcode: <input type="text">
+
+				<label for="Motor-type">Motor Type</label>
+				<select name="Motor type" id="motortype">
+					<option value="Zx12r">Zx12r</option>
+					<option value="Zx10r">Zx10r</option>
+					<option value="Zx6r">Zx6r</option>
+					<option value="H2r">H2r</option>
+					<option value="H2">H2</option>
+					<option value="Ninja600">Ninja 600</option>
+					<option value="Ninja500">Ninja 500</option>
+					<option value="Ninja7">Ninja 7</option>
+					<option value="Zx4rr">Zx4rr</option>
+					<option value="Bekijk-alle">Bekijk alle</option>
+				</select>
+			</fieldset>
+
+			<button>Vind een dealer</button>
+		</section>
+
+		<section>
+			<h2>Accessoires</h2>
+
+			<h3>De details maken het verschil</h3>
+			<p>Hoge prestaties en kwaliteit, zonder compromissen</p>
+			<img src="images/tank-sticker.jpg" alt="Foto van een Kawasaki tank sticker">
+			<img src="images/motor-seat.jpg" alt="Foto van een Kawasaki motorseat">
+			<img src="images/levers.jpg" alt="Foto van de Kawasaki handvaten">
+
+			<!-- lever foto bron: https://www.gfp-store.co.za/product/lightech-folding-brake-clutch-levers-klev125j-kawasaki-zx10-2021-2023/ -->
+			<!-- tank sticker foto bron: https://www.kawasaki.nl/nl/accessories/motoren/bescherming/tankpad_z900?UidCat=0547WlhZXFhaWllYWFlYWVhcW1pZRgYERSYk&UidSubCat=0605WlhZXFhaWllYWFpfWl9RWl9eWlFdRgYERSYk&Uid=08C4Dg5dUVoNWFtfDVsOXApbWQoKDlFQC15ZXVleXg1YWgs -->
+			<!-- motorseat foto bro: https://www.bagsterstore.nl/kawasaki-z-650-specserie-16-19.html -->
+		</section>
+
+
+		<section>
+			<h2>Nieuws</h2>
+				<article>
+					<h3>Kawasaki introduceert de nieuwe Z900 voor 2025</h3>
+					<p>De nieuwe Kawasaki Z900 is op 2 november 2024 aangekondigd door Kawasaki!</p>
+					<a href="">Lees meer</a>
+				</article>
+
+				<article>
+					<h3>Versys 1100 wordt officeel de begeleidingsmotor van de tour de france.</h3>
+					<p>In de 2025 tour de france is de Kawasaki Versys 1100 officeel aangekondigd als de begeleidingsmotor van de tour de france.</p>
+					<a href="">Lees meer</a>
+				</article>
+
+				<article>
+					<h3>Nieuwe kleurstellingen voor 2025 Ninja ZX-10R en RR</h3>
+					<p>De Kawasaki Ninja ZX-10R en ZX-10RR krijgen begin 2025 een paar nieuwe kleurstellingen!</p>
+					<a href="">Lees meer</a>
+				</article>
+
+				<a href="">Bekijk alles</a>
+		</section>
+	</main>
+
+	<footer>
+
+	</footer>
+
+
+
+
 
 	<script defer src="scripts/script.js"></script>
 </body>
