--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
 	<main>
 		<section>
-			<h2>NEW Z900 Performance. Refinement. Sugomi</h2>
-			<!-- <img src="images/z900.jpg" alt="Foto van de nieuwe motor 'Z900'">  -->
-			<!-- BRON VAN Z900: https://scooterxpress.nl/kawasaki-maakt-prijzen-bekend-van-de-compleet-nieuwe-z900/ -->
+			<h2>NEW Z900 Performance. Refinement. Sugomi.</h2>
 			<a href="z900.html">Lees meer</a>
 		</section>
 
@@ -80,14 +78,16 @@
 				<fieldset>
 					<legend>Aantal CC</legend>
 					<label>
-						<input type="range" name="cc" min="125" max="2500">
+						<input type="range" name="cc" min="125" max="1200" value="125" id="ccRange">
+						<output>125</output>
 					</label>
 				</fieldset>
-		
+				
 				<fieldset>
 					<legend>Prijs</legend>
 					<label>
-						<input type="range" name="price" min="0" max="50000">
+						<input type="range" name="price" min="0" max="20000" value="0" id="priceRange">
+						<output>0</output>
 					</label>
 				</fieldset>
 		
@@ -110,7 +110,7 @@
 				<h3>Extra touring voodeel</h3>
 				<p>De hightech Ninja 1000SX en Versys 1000 modellen zijn leiders in hun segment. Dit seizoen kun je deze modellen nog cpmpleter maken met de extra voordelige tourer pakketten.</p>
 				<a href="">Ontdek meer</a>
-				<img src="images/touring-voordeel.jpeg" alt="Foto van een man die aan het touren is op zijn motor in een bos">
+				<img src="images/touring-voordeel.jpeg.jpg" alt="Foto van een man die aan het touren is op zijn motor in een bos">
 				<!-- Touring foto bron: https://www.suzuki.nl/motoren/modellen/adventure-sport/ -->
 			</article>
 
@@ -123,17 +123,17 @@
 				<legend>Vind de dichtsbijzijnde dealer</legend>
 				postcode: <input type="text">
 
-				<label for="Motor-type">Motor Type</label>
+				<label for="Motor-type">Selecteer type motor</label>
 				<select name="Motor type" id="motortype">
-					<option value="Zx12r">Zx12r</option>
-					<option value="Zx10r">Zx10r</option>
-					<option value="Zx6r">Zx6r</option>
-					<option value="H2r">H2r</option>
-					<option value="H2">H2</option>
-					<option value="Ninja600">Ninja 600</option>
-					<option value="Ninja500">Ninja 500</option>
-					<option value="Ninja7">Ninja 7</option>
-					<option value="Zx4rr">Zx4rr</option>
+					<option value="Zx12r">Sport</option>
+					<option value="Zx10r">Tour</option>
+					<option value="Zx6r">Cruiser</option>
+					<option value="H2r">Crosser</option>
+					<option value="H2">Off road</option>
+					<option value="Ninja600">Moto cross</option>
+					<option value="Ninja500">Choppers</option>
+					<option value="Ninja7">Street bikes</option>
+					<option value="Zx4rr">Naked bikes</option>
 					<option value="Bekijk-alle">Bekijk alle</option>
 				</select>
 			</fieldset>
@@ -146,13 +146,15 @@
 
 			<h3>De details maken het verschil</h3>
 			<p>Hoge prestaties en kwaliteit, zonder compromissen</p>
+			
 			<img src="images/tank-sticker.jpg" alt="Foto van een Kawasaki tank sticker">
 			<img src="images/motor-seat.jpg" alt="Foto van een Kawasaki motorseat">
 			<img src="images/levers.jpg" alt="Foto van de Kawasaki handvaten">
 
 			<!-- lever foto bron: https://www.gfp-store.co.za/product/lightech-folding-brake-clutch-levers-klev125j-kawasaki-zx10-2021-2023/ -->
 			<!-- tank sticker foto bron: https://www.kawasaki.nl/nl/accessories/motoren/bescherming/tankpad_z900?UidCat=0547WlhZXFhaWllYWFlYWVhcW1pZRgYERSYk&UidSubCat=0605WlhZXFhaWllYWFpfWl9RWl9eWlFdRgYERSYk&Uid=08C4Dg5dUVoNWFtfDVsOXApbWQoKDlFQC15ZXVleXg1YWgs -->
-			<!-- motorseat foto bro: https://www.bagsterstore.nl/kawasaki-z-650-specserie-16-19.html -->
+			<!-- motor seat foto bron:https://www.amazon.nl/-/en/Motorcycle-Mudguard-License-Accessories-Kawasaki/dp/B0CQSZWQQH -->
+			
 		</section>
 
 
