--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="Kawasaki" content="Yuan">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Kawasaki Nederland</title>
@@ -18,7 +18,7 @@
 
 	<header>
 		<h1 aria-label="Kawasaki Nederland">
-			<img src="images/kawasaki-groen-logo.png" alt="">
+			<a href="index.html"><img src="images/kawasaki-groen-logo.png" alt=""></a>
 		</h1>
 		<!-- BRON VAN LOGO: https://www.freepnglogos.com/pics/kawasaki-motors-png-logo -->
 		<button class="hamburger" aria-label="Navigatie knop uitklappen">
@@ -43,7 +43,7 @@
 	<main>
 		<section>
 			<h2>NEW Z900 Performance. Refinement. Sugomi.</h2>
-			<a href="kernwaarden.html">Lees meer</a>
+			<a href="kernwaarden.html">Lees meer over de Z900</a>
 		</section>
 
 		<section>
@@ -115,7 +115,7 @@
 				<img src="images/voordeel-tour1.jpg" alt="Foto van twee motor rijders die aan het touren zijn">
 			</article>
 
-			<a>Bekijk alles</a>
+			<a href="">Bekijk alle voordelen</a>
 		</section>
 
 		<section>
@@ -142,7 +142,7 @@
 				</fieldset>
 			</form>	
 
-			<a>Vind een dealer</a>
+			<a href="">Vind een dealer</a>
 		</section>
 
 		<section>
@@ -160,7 +160,7 @@
 			<!-- tank sticker foto bron: https://www.kawasaki.nl/nl/accessories/motoren/bescherming/tankpad_z900?UidCat=0547WlhZXFhaWllYWFlYWVhcW1pZRgYERSYk&UidSubCat=0605WlhZXFhaWllYWFpfWl9RWl9eWlFdRgYERSYk&Uid=08C4Dg5dUVoNWFtfDVsOXApbWQoKDlFQC15ZXVleXg1YWgs -->
 			<!-- motor seat foto bron:https://www.amazon.nl/-/en/Motorcycle-Mudguard-License-Accessories-Kawasaki/dp/B0CQSZWQQH -->
 			
-			<a>Ontdek alle accessoiresen</a>
+			<a href="">Ontdek alle accessoiresen</a>
 		</section>
 
 
@@ -169,32 +169,77 @@
 			
 				<article>
 					<h3>Kawasaki introduceert de nieuwe Z900 voor 2025.</h3>
-					<a href="">Lees meer</a>
+					<a href="">Lees meer nieuws</a>
 				</article>
 				<img src="images/z900-nieuws.jpg" alt="foto van de nieuwe z900 motor met een witte achtergrond">
 
 				<article>
 					<h3>Versys 1100 wordt officeel de begeleidingsmotor van de tour de france.</h3>
-					<a href="">Lees meer</a>
+					<a href="">Lees meer nieuws</a>
 				</article>
 				<img src="images/z900-nieuws2.jpg" alt="foto van de nieuwe z900 motor met een donkere smoke achtergrond">
 
 				<article>
 					<h3>Nieuwe kleurstellingen voor 2025 Ninja ZX-10R en RR.</h3>
-					<a href="">Lees meer</a>
+					<a href="">Lees meer nieuws</a>
 				</article>
 				<img src="images/tour-de-france.jpg" alt="een actie foto van de kawasaki motor, in de tour de france">
 
-				<a>Bekijk alles</a>
+				<a href="">Bekijk alle nieuws</a>
+		</section>
+
+		<section>
+			<h2>Race nieuws</h2>
+
+			<article>
+				<img src="images/race-1.jpg" alt="">
+				<h3>MTM Kawasaki confirm 2025 riders and team structure</h3>
+				<p>10 December 2024</p>
+			</article>
+
+			<article>
+				<img src="images/race-2.jpg" alt="">
+				<h3>Kawasaki WorldSBK team reveal 2025 livery</h3>
+				<p>28 November 2024</p>
+			</article>
+
+			<article>
+				<img src="images/race-3.jpg" alt="">
+				<h3>Gerlof makes more progress on the Ninja ZX-10RR</h3>
+				<p>27 November 2024</p>
+			</article>
+
+			<article>
+				<img src="images/race-4.jpg" alt="">
+				<h3>Strong second test for Bimota by Kawasaki Racing Team</h3>
+				<p>27 November 2024</p>
+			</article>
 		</section>
 	</main>
 
 	<footer>
+		<section>
+		<h4>VOLG ONS OP</h4>
+		<ul>
+			<li>
+				<a href=""></a>
+				<a href=""></a>
+			</li>
+		</ul>
+		</section>
 
+		<section>
+			<h4>© 2024 Kawasaki Motors Europe N.V.</h4>
+				<ul>
+					<li>
+						<a href="">Contact</a>
+						<a href="">Legal Notice</a>
+						<a href="">Privacy</a>
+						<a href="">Cookie Notice & Settings</a>
+					</li>
+				</ul>
+		</section>
 	</footer>
-
-
-
 
 
 	<script defer src="scripts/script.js"></script>
