--- a/kernwaarden.html
+++ b/kernwaarden.html
@@ -3,10 +3,10 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="Kawasaki" content="Yuan">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Kernwaarden</title>
+	<title>Kawasaki kernwaarden</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link href="styles/kernwaarden.css" rel="stylesheet">
@@ -56,15 +56,26 @@
 					<option value="Nieuws">Nieuws</option>
 					<option value="Archief">Archief</option>
 				</select>
+
+				<ul aria-label="Navigatie" hidden>
+					<li><a href="">Kernwaarden</a></li>
+					<li><a href="">Ons Verhaal</a></li>
+					<li><a href="">Iconische Modellen</a></li>
+					<li><a href="">Kawasaki Technologie</a></li>
+					<li><a href="">Nieuws</a></li>
+					<li><a href="">Archief</a></li>
+				</ul>
 			</fieldset>
 		</form>	
 
 		<section>
 			<h2>Kernwaarden</h2>
 			<blockquote>
+				<!-- Hulp van student assistent (span "") -->
 				<span >“</span>Kawasaki creëert high-performance producten voor motorrijders die op zoek zijn naar de ultieme rijervaring.
 				<span >”</span>
 			</blockquote>
+			<img src="images/kawasaki_world_mission.jpg" alt="Oude foto van een motor racer op een kawasaki motor">
 			<img src="images/about-mission-01.jpg" alt="Foto van een hele oude motor, de Mandene 83.">
 			<p>Motorcycle & Engine Company is de enige afdeling van Kawasaki Heavy Industries, Ltd. dat producten rechtstreeks aan de consument levert.
 			Het bedrijf produceert een breed scala van producten, waaronder motorfietsen, ATV's, terreinwagens, jetski's®, benzine motoren voor algemene doeleinden etc, en levert deze aan markten over de gehele wereld.</p>
@@ -85,11 +96,28 @@
 	</main>
 
 	<footer>
+		<section>
+			<h4>VOLG ONS OP</h4>
+			<ul>
+				<li>
+					<a href=""></a>
+					<a href=""></a>
+				</li>
+			</ul>
+		</section>
 
+		<section>
+			<h4>© 2024 Kawasaki Motors Europe N.V.</h4>
+			<ul>
+				<li>
+					<a href="">Contact</a>
+					<a href="">Legal Notice</a>
+					<a href="">Privacy</a>
+					<a href="">Cookie Notice & Settings</a>
+				</li>
+			</ul>
+		</section>
 	</footer>
-
-
-
 
 
 	<script defer src="scripts/script.js"></script>
