--- a/kernwaarden.html
+++ b/kernwaarden.html
@@ -29,6 +29,9 @@
         
         <nav>
             <ul>
+				<label>Waar ben je naar opzoek</label>
+				<input type="text" name="hamburgerzoek" placeholder="Waar ben je naar opzoek">
+
                 <li><a href="">Producten</a></li>
                 <li><a href="">Accessoires & Onderdelen</a></li>
                 <li><a href="">Race</a></li>
@@ -97,25 +100,56 @@
 
 	<footer>
 		<section>
-			<h4>VOLG ONS OP</h4>
-			<ul>
-				<li>
-					<a href=""></a>
-					<a href=""></a>
-				</li>
-			</ul>
+		<h4>VOLG ONS OP</h4>
+		<ul>
+			<li>
+				<a href=""></a>
+				<a href=""></a>
+			</li>
+		</ul>
+		</section>
+
+		<section>
+			
+			<h4>Waar zoek je naar</h4>
+			<li><a href="">Kawasaki Producten</a></li>
+			<li><a href="">Kawasaki Accessoires & Onderdelen</a></li>
+			<li><a href="">Kawasaki Dealers</a></li>
+			<li><a href="">Kawasaki Racing</a></li>
+			
+		
+			<h4>Tools</h4>
+			<li><a href="">Proefrit</a></li>
+			<li><a href="">Vergelijkingstool</a></li>
+			
+		
+			<h4>Blijf in contact</h4>
+			<li><a href="">Kawasaki Nieuwsbrief</a></li>
+			<li><a href="">Contact Kawasaki</a></li>
+			<li><a href="">Kawasaki Nieuws</a></li>
+			
+		
+			<h4>Nuttige links</h4>
+			<li><a href="">Press</a></li>
+			<li><a href="">Legal Notice</a></li>
+			<li><a href="">Privacy Policy</a></li>
+			
+		
+			<h4>Over Kawasaki</h4>
+			<li><a href="">Over Kawasaki</a></li>
+			<li><a href="">Kawasaki Heavy Industries</a></li>
 		</section>
 
 		<section>
 			<h4>© 2024 Kawasaki Motors Europe N.V.</h4>
-			<ul>
-				<li>
-					<a href="">Contact</a>
-					<a href="">Legal Notice</a>
-					<a href="">Privacy</a>
-					<a href="">Cookie Notice & Settings</a>
-				</li>
-			</ul>
+				<ul>
+					<li>
+						<a href="">Contact</a>
+						<a href="">Legal Notice</a>
+						<a href="">Privacy</a>
+						<a href="">Cookie Notice & Settings</a>
+					</li>
+				</ul>
 		</section>
 	</footer>
 
