--- a/kernwaarden.html
+++ b/kernwaarden.html
@@ -99,14 +99,16 @@
 	</main>
 
 	<footer>
+		<button title="Back to top">Back to top</button>
+
 		<section>
-		<h4>VOLG ONS OP</h4>
-		<ul>
-			<li>
-				<a href=""></a>
-				<a href=""></a>
-			</li>
-		</ul>
+			<h4>VOLG ONS OP</h4>
+			<ul>
+				<li>
+					<a href=""></a>
+					<a href=""></a>
+				</li>
+			</ul>
 		</section>
 
 		<section>
